Corrected three line list alignment

--- a/client/resources/styles/app.scss
+++ b/client/resources/styles/app.scss
@@ -547,6 +547,10 @@ main {
 
 .mdc-list--three-line .mdc-list-item {
     height: 108px;
+
+    .mdc-list-item__secondary-text:nth-child(2) {
+        margin-bottom: -4px;
+    }
 }
 
 .mdc-list--three-line .mdc-list-item__text {
